# Benedik-ai

./: README.md  pyproject.toml
src/cs2_case_overlay/: config.py  main.py
src/cs2_case_overlay/assets/: manager.py
src/cs2_case_overlay/core/: bus.py  events.py
src/cs2_case_overlay/data/: cases.json
src/cs2_case_overlay/detection/: memory_reader.py
src/cs2_case_overlay/overlay/: window.py
