[project]
name = "cs2-case-overlay"
version = "0.1.0"
description = "External Windows-only cosmetic case opening overlay for Counter-Strike 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8.0",
  "pymem>=1.14.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
